Avoid using KIO on local files

Using KIO on MacOS and Windows may cause some trouble and is not
required when working on local files. This change tries to bypass the
KIO functions by using Qt standard functions in this case.

BUG: 400761
FIXED-IN: 5.0.4